--- a/WPFdb/MainWindow.xaml
+++ b/WPFdb/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFdb"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        >
     <Grid>
-        <Button x:Name="btnTest" Content="Button" HorizontalAlignment="Left" Margin="529,258,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <TextBox x:Name="txtTest" HorizontalAlignment="Left" Height="23" Margin="254,254,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.88,2.988"/>
-        <Label x:Name="lblTest" Content="Label" HorizontalAlignment="Left" Margin="270,167,0,0" VerticalAlignment="Top"/>
+       
+        <Button x:Name="btnCustomer" Content="Customer"  Grid.Column="2" HorizontalAlignment="Left" Margin="259.4,209,0,0" VerticalAlignment="Top" Width="75" Click="BtnCustomer_Click"/>
+        <Button x:Name="btnAdmin" Content="Admin" Grid.Column="2" HorizontalAlignment="Left" Margin="121.4,209,0,0" VerticalAlignment="Top" Width="75" Click="BtnAdmin_Click"/>
 
     </Grid>
 </Window>
