--- a/WPFdb/AdminProductsWindow.xaml
+++ b/WPFdb/AdminProductsWindow.xaml
@@ -11,7 +11,7 @@
         <Menu x:Name="mneuActions" HorizontalAlignment="Left" Height="114" Margin="34,74,0,0" VerticalAlignment="Top" Width="109">
             <MenuItem Header="_Products" Width="109" />
             <MenuItem Header="_Suppliers" Width="109" />
-            <MenuItem Header="_Discounts" Width="109" />
+            <MenuItem Header="_Discounts" Width="109" Click="MenuItem_Click" />
             <MenuItem Header="_Orders" Width="109" />
             <MenuItem Header="_History" Width="109" />
 
