--- a/WPFdb/CustomerWindow.xaml
+++ b/WPFdb/CustomerWindow.xaml
@@ -32,6 +32,7 @@
             </DataGrid.Columns>
 
         </DataGrid>
+        <Button x:Name="btnOrderHistory" Content="Show Order History" HorizontalAlignment="Left" Margin="508,383,0,0" VerticalAlignment="Top" Width="75"/>
 
 
 
