--- a/WPFdb/AdminProductsWindow.xaml
+++ b/WPFdb/AdminProductsWindow.xaml
@@ -23,20 +23,47 @@
 
 
         </Menu>
-        <TextBox x:Name="tbxProductName"  HorizontalAlignment="Left" Height="31" Margin="222,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125" Grid.ColumnSpan="2"/>
-        <Label Content="Product Name" HorizontalAlignment="Left" Margin="221,34,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbxProductName"  HorizontalAlignment="Left" Height="31" Margin="193,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125"/>
+        <Label Content="Product Name" HorizontalAlignment="Left" Margin="193,34,0,0" VerticalAlignment="Top"/>
 
-        <ComboBox x:Name="cmboxSuppliers" HorizontalAlignment="Left" Margin="222,151,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="CmboxSuppliers_SelectionChanged"/>
-        <TextBox x:Name="tbxQuantity" HorizontalAlignment="Left" Height="32" Margin="409,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67"/>
-        <ScrollBar  x:Name="scrollBarQuantity" Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="456,60,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged"/>
-        <Label Content="Quantity" HorizontalAlignment="Left" Margin="409,34,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cmboxSuppliers" HorizontalAlignment="Left" Margin="193,151,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="CmboxSuppliers_SelectionChanged"/>
+        <TextBox x:Name="tbxQuantity" HorizontalAlignment="Left" Height="32" Margin="23.6,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67" Grid.Column="1"/>
+        <ScrollBar  x:Name="scrollBarQuantity" Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="70.6,60,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged" Grid.Column="1"/>
+        <Label Content="Quantity" HorizontalAlignment="Left" Margin="11.6,28,0,0" VerticalAlignment="Top" Grid.Column="1" Width="80" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-0.089"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
 
-        <Label Content="Supplier" HorizontalAlignment="Left" Margin="227,125,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbxPrice" HorizontalAlignment="Left" Height="32" Margin="71,142,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67" Grid.Column="1"/>
-        <ScrollBar  x:Name="scrollbarPrice"  Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="118,142,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged" Grid.Column="1"/>
-        <Label Content="Price" HorizontalAlignment="Left" Margin="71,116,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Content="Supplier" HorizontalAlignment="Left" Margin="193,125,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbxPrice" HorizontalAlignment="Left" Height="32" Margin="23.6,143,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67" Grid.Column="1"/>
+        <ScrollBar  x:Name="scrollbarPrice"  Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="70.6,143,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged" Grid.Column="1"/>
+        <Label Content="Price" HorizontalAlignment="Left" Margin="23.6,117,0,0" VerticalAlignment="Top" Grid.Column="1"/>
         <Button x:Name="btnAddProduct" Content="Add product" HorizontalAlignment="Left" Margin="71,338,0,0" VerticalAlignment="Top" Width="75" Click="BtnAddProduct_Click" Grid.Column="1"/>
-        <Button x:Name="btnDeleteProduct" Content="Delete product" HorizontalAlignment="Left" Margin="294,338,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnDeleteProduct" Content="Delete product" HorizontalAlignment="Left" Margin="70.6,367,0,0" VerticalAlignment="Top" Width="101" Grid.Column="1"/>
+        <Button x:Name="btnUpdateQuantity" Content="Update Quantity" HorizontalAlignment="Left" Margin="191.6,367,0,0" VerticalAlignment="Top" Width="101" Grid.Column="1" Click="btn_UpdateQuantity"/>
+        <DataGrid x:Name="dgProducts" Grid.Column="1" HorizontalAlignment="Left" Height="229" Margin="120.6,60,0,0" VerticalAlignment="Top" ItemsSource="{Binding}" Width="311">
+
+            <DataGrid.Columns>
+
+                <DataGridTemplateColumn Header="Select">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+
+                            <Button Name="btnSelectProduct" Content="Select" Click="btnSelectProduct" />
+
+                        </DataTemplate>
+
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
 
 
     </Grid>
