--- a/WPFdb/CustomerWindow.xaml
+++ b/WPFdb/CustomerWindow.xaml
@@ -10,29 +10,30 @@
 
     <Grid Margin="0,0,-6.4,-13">
         <Button x:Name="btnCustomerLogInMenu" Content="Log In" HorizontalAlignment="Left" Margin="642,34,0,0" VerticalAlignment="Top" Width="75" Click="CustomerLogInMenu"/>
-        <Button x:Name="btnShowCart" Content="Show Cart" HorizontalAlignment="Left" Margin="642,383,0,0" VerticalAlignment="Top" Width="75" Click="BtnShowCart_Click"/>
+        <Button x:Name="btnShowCart" Content="Show Cart" HorizontalAlignment="Left" Margin="642,383,0,0" VerticalAlignment="Top" Width="94" Click="BtnShowCart_Click"/>
         <Button x:Name="btnConfirmOrder" Content="Confirm Order" HorizontalAlignment="Left" Margin="642,383,0,0" VerticalAlignment="Top" Width="75" Visibility="Hidden" Click="BtnConfirmOrder_Click"/>
 
-        <Label x:Name="lblSingedInAs" Content="" HorizontalAlignment="Left" Margin="73,34,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblSingedInAs" Content="" HorizontalAlignment="Left" Margin="73,34,0,0" VerticalAlignment="Top" Width="438"/>
 
         <DataGrid x:Name="DataGridProducts" HorizontalAlignment="Left" Height="262" Margin="73,75,0,0" VerticalAlignment="Top" Width="663" ItemsSource="{Binding}">
             <DataGrid.Columns>
-                
+
                 <DataGridTemplateColumn Header="Quantity">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            
-                                <Button Name="btnAddQuantity" Content="Quantity" Click="addQuantity_Click" />
-                       
-                            </DataTemplate>
-                        
+
+                            <Button Name="btnAddQuantity" Content="Quantity" Click="addQuantity_Click" />
+
+                        </DataTemplate>
+
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                
+
             </DataGrid.Columns>
 
         </DataGrid>
-        <Button x:Name="btnOrderHistory" Content="Show Order History" HorizontalAlignment="Left" Margin="508,383,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnOrderHistory" Content="Show Order History" HorizontalAlignment="Left" Margin="508,383,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnShowProducts" Content="Show Products" HorizontalAlignment="Left" Margin="391,383,0,0" Width="93" Height="20" VerticalAlignment="Top" Click="btnShowProducts_Click"/>
 
 
 
