--- a/WPFdb/DiscountsWindow.xaml
+++ b/WPFdb/DiscountsWindow.xaml
@@ -13,7 +13,7 @@
         <Label Content="End Date" HorizontalAlignment="Left" Margin="426,162,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.103,0.538"/>
         <Label Content="Start Date" HorizontalAlignment="Left" Margin="213,164,0,0" VerticalAlignment="Top"/>
         <Label Content="Discount" HorizontalAlignment="Left" Margin="210,319,0,0" VerticalAlignment="Top"/>
-        <Label Content="Discount page" HorizontalAlignment="Left" Margin="273,23,0,0" VerticalAlignment="Top" Width="137"/>
+        <Label Content="Admin Page" HorizontalAlignment="Left" Margin="34,33,0,0" VerticalAlignment="Top" Width="109"/>
         <TextBox x:Name="txtDiscountName" HorizontalAlignment="Left" Height="23" Margin="210,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txtDiscountName_TextChanged"/>
         <TextBox x:Name="txtStartDate" HorizontalAlignment="Left" Height="23" Margin="213,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125"/>
         <TextBox x:Name="txtEndDate" HorizontalAlignment="Left" Height="23" Margin="426,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125"/>
