--- a/WPFdb/SupplierWindow.xaml
+++ b/WPFdb/SupplierWindow.xaml
@@ -12,7 +12,7 @@
             <MenuItem x:Name="productItem" Header="_Products" Width="109" Click="AdminProductsItem_Click" />
             <MenuItem x:Name="supplierItem" Header="_Suppliers" Width="109" Click="AdminSupplierItem_Click" />
             <MenuItem x:Name="DiscountItem" Header="_Discounts" Width="109" Click="AdminDiscountItem_Click"/>
-            <MenuItem Header="_Orders" Width="109" />
+            <MenuItem x:Name="OrdersItem"   Header="_Orders" Width="109" Click="AdminOrdersItem_Click"/>
             <MenuItem Header="_History" Width="109" />
 
 
