--- a/WPFdb/CustomerWindow.xaml
+++ b/WPFdb/CustomerWindow.xaml
@@ -34,6 +34,7 @@
         </DataGrid>
         <Button x:Name="btnOrderHistory" Content="Show Order History" HorizontalAlignment="Left" Margin="508,383,0,0" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnShowProducts" Content="Show Products" HorizontalAlignment="Left" Margin="391,383,0,0" Width="93" Height="20" VerticalAlignment="Top" Click="btnShowProducts_Click"/>
+        <Label x:Name="lblTotalPrice" Content="Total Price: 0" HorizontalAlignment="Left" Margin="625,342,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.911,0.508"/>
 
 
 
