--- a/WPFdb/AdminProductsWindow.xaml
+++ b/WPFdb/AdminProductsWindow.xaml
@@ -26,7 +26,7 @@
         <TextBox x:Name="tbxProductName"  HorizontalAlignment="Left" Height="31" Margin="193,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125"/>
         <Label Content="Product Name" HorizontalAlignment="Left" Margin="193,34,0,0" VerticalAlignment="Top"/>
 
-        <ComboBox x:Name="cmboxSuppliers" HorizontalAlignment="Left" Margin="193,151,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="CmboxSuppliers_SelectionChanged"/>
+        <ComboBox x:Name="cmboxSuppliers" HorizontalAlignment="Left" Margin="193,151,0,0" VerticalAlignment="Top" Width="125"/>
         <TextBox x:Name="tbxQuantity" HorizontalAlignment="Left" Height="32" Margin="23.6,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67" Grid.Column="1"/>
         <ScrollBar  x:Name="scrollBarQuantity" Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="70.6,60,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged" Grid.Column="1"/>
         <Label Content="Quantity" HorizontalAlignment="Left" Margin="11.6,28,0,0" VerticalAlignment="Top" Grid.Column="1" Width="80" RenderTransformOrigin="0.5,0.5">
@@ -45,7 +45,7 @@
         <ScrollBar  x:Name="scrollbarPrice"  Minimum="-5000" Maximum="0"  HorizontalAlignment="Left" Margin="70.6,143,0,0" VerticalAlignment="Top" Width="20" Height="31" ValueChanged="ScrollBar_ValueChanged" Grid.Column="1"/>
         <Label Content="Price" HorizontalAlignment="Left" Margin="23.6,117,0,0" VerticalAlignment="Top" Grid.Column="1"/>
         <Button x:Name="btnAddProduct" Content="Add product" HorizontalAlignment="Left" Margin="71,338,0,0" VerticalAlignment="Top" Width="75" Click="BtnAddProduct_Click" Grid.Column="1"/>
-        <Button x:Name="btnDeleteProduct" Content="Delete product" HorizontalAlignment="Left" Margin="70.6,367,0,0" VerticalAlignment="Top" Width="101" Grid.Column="1"/>
+        <Button x:Name="btnDeleteProduct" Content="Delete product" HorizontalAlignment="Left" Margin="70.6,367,0,0" VerticalAlignment="Top" Width="101" Grid.Column="1" Click="BtnDeleteProduct_Click"/>
         <Button x:Name="btnUpdateQuantity" Content="Update Quantity" HorizontalAlignment="Left" Margin="191.6,367,0,0" VerticalAlignment="Top" Width="101" Grid.Column="1" Click="btn_UpdateQuantity"/>
         <DataGrid x:Name="dgProducts" Grid.Column="1" HorizontalAlignment="Left" Height="229" Margin="120.6,60,0,0" VerticalAlignment="Top" ItemsSource="{Binding}" Width="311">
 
