--- a/WPFdb/AdminOrdersWindow.xaml
+++ b/WPFdb/AdminOrdersWindow.xaml
@@ -14,7 +14,7 @@
         <Label Content="Admin Page" HorizontalAlignment="Left" Margin="39,17,0,0" VerticalAlignment="Top"/>
 
         <Menu x:Name="menuActions" HorizontalAlignment="Left" Height="114" Margin="34,74,0,0" VerticalAlignment="Top" Width="109">
-            <MenuItem x:Name="MenuitemProduct" Header="_Products" Width="109"  />
+            <MenuItem x:Name="MenuitemProduct" Header="_Products" Width="109" Click="Products_Click"  />
             <MenuItem x:Name="MenuitemSuppliers" Header="_Suppliers" Width="109" Click="Suppliers_Click" />
             <MenuItem x:Name="MenuitemDiscounts" Header="_Discounts" Width="109" Click="Discounts_Click" />
             <MenuItem x:Name="MenuitemOrders" Header="_Orders" Width="109"  />
